solved scrollbar issueY

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ body {
   display: none;
   position: absolute;
   padding: 0;
+  z-index: 100;
   outline: none;
   border: 2px solid #107C41;
 }  
@@ -77,25 +78,39 @@ border: 2px solid #107C41;
   height: 20px;
   display: flex;
   justify-content: start;
-  background-color: #F5F5F5;
+  background-color: #ebebeb;
+}
+#top-canvas {
+  position: relative;
+  width: 100%;
+  height: 20px;
+  left: 1;
 }
 #row-2{
   display: flex;
   height: 100%;
   width: 100%;
 }
-#main-canvas {
-    cursor: cell;
-    height: 100%;
-    width: 100%;
-}
-#top-canvas {
+.sheet{
+  height: 100%;
   width: 100%;
-  height: 20px;
 }
 #side-canvas {
+  position: relative;
+  background-color: #ebebeb;
   width: 60px;
+  left: 0;
+  top: 1;
+
   height: 100%;
+}
+#main-canvas {
+  position: relative;
+  top: 1;
+  left: 1;
+  cursor: cell;
+  height: 100%;
+  width: 100%;
 }
 
 /* scrollbar */
